# ProxmoxMCP-Plus

./: .dockerignore  .gitignore  .mcpbignore  CHANGELOG.md  Dockerfile  INSTALLATION.md  LICENSE.md  README.md  SECURITY.md  SKILL.md  config.example.json  docker-compose.yml  glama.json  llms-install.md  main.py  manifest.json  pxas.py  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  server.json  setup.py  smithery.yaml  start_openapi.sh
.github/: SECURITY.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish-ghcr.yml  publish-mcp-registry.yml  publish-pypi.yml
docs/: agent-installation.md  container-command-execution.md  demo-script.md  launch-post.md
docs/examples/: create-test-vm.md  download-iso-and-create-lxc.md  rollback-snapshot.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.4.6.md  v0.4.7.md  v0.4.8.md  v0.4.9.md  v0.5.0.md  v0.5.1.md  v0.5.2.md
docs/security/: paramiko-cve-2026-44405.md
docs/wiki/: API & Tool Reference.md  Container Command Execution.md  Developer Guide.md  Home.md  Integrations Guide.md  Operator Guide.md  README.md  Release & Upgrade Notes.md  Security Guide.md  Troubleshooting.md  _Sidebar.md
examples/: README.md  create-test-vm.md  rollback-snapshot.md
proxmox-config/: claude_desktop_config.example.json  config.example.json  config.live.example.json
proxmox-config/opencode/: README.md  opencode.jsonc.example  proxmox-mcp.env.example
requirements/: base.in  dev.in
scripts/: render_demo_gif.py  start_openapi.sh
src/proxmox_mcp/: __init__.py  docker_entrypoint.py  exceptions.py  openapi_proxy.py  server.py
src/proxmox_mcp/config/: loader.py  models.py
src/proxmox_mcp/core/: logging.py  (+3 more)
test_scripts/: diagnose_proxmox_connectivity.py  run_openrouter_llm_smoke.py  run_real_e2e.py
tests/: conftest.py  test_command_policy.py  test_connection_pool.py  test_container_console.py  test_docker_entrypoint.py  test_exceptions.py  test_formatting_modules.py  test_jobs.py  test_live_e2e_config.py  test_logging.py  test_observability_metrics.py  test_openapi_proxy.py  test_server.py  test_ssh_tunnel.py  test_tools_definitions.py  test_utils_auth.py  test_utils_logging.py  test_validators.py
tests/integration/: test_contract_scaffold.py  test_real_contract.py
tests/scripts/: diagnose_proxmox_connectivity.py  mock_mcp_stdio.py  run_openrouter_llm_smoke.py  run_real_e2e.py
(+32 files in other folders)
