[project]
name = "proxmox-mcp-plus"
version = "0.2.0"
description = "Enhanced Proxmox MCP Server - Enterprise-grade Proxmox VE automation via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kevin", email = "kevin@example.com"}
]
keywords = ["proxmox", "mcp", "virtualization", "automation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.12.1,<2.0.0",
    "proxmoxer>=2.0.1,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "pydantic>=2.11.1,<3.0.0",
    "paramiko>=3.0.0,<4.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcpo>=0.0.17",
]
observability = [
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
    "types-requests>=2.31.0",
    "types-paramiko>=3.0.0",
    "pip-audit>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/RekklesNA/ProxmoxMCP-Plus"
Documentation = "https://github.com/RekklesNA/ProxmoxMCP-Plus/wiki"
Repository = "https://github.com/RekklesNA/ProxmoxMCP-Plus"
"Bug Tracker" = "https://github.com/RekklesNA/ProxmoxMCP-Plus/issues"

[project.scripts]
proxmox-mcp = "proxmox_mcp.server:main"
proxmox-mcp-api = "proxmox_mcp.openapi_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxmox_mcp"]
